objects/DynaformDOTSSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Endpoint__c</fullName>
        <defaultValue>&quot;http://trial.serviceobjects.com/rest/LV/api.svc/ValidateLeadInfo/V2&quot;</defaultValue>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <label>License Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <defaultValue>&quot;full1p&quot;</defaultValue>
        <label>Test Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dynaform DOTS Settings</label>
</CustomObject>